gcc-14.2.0/gcc/testsuite/gdc.test/compilable/const.d
version https://git-lfs.github.com/spec/v1
oid sha256:98eb28bac29f78b0e69d30fd517f70ef1b32a0c83b447bcd794ee0c6aac367a4
size 1104
